[package]
name = "rust-os"
version = "0.1.0"
authors = ["Shinya Tahara <midnight326@gmail.com>"]
edition = "2018"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --reliase`
[profile.release]
panic = "abort" # disable stack unwinding on panic

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
